2023-02-20  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (readISdata): bug fixed
	reading MT 600, 650, etc data skipped because of zero excitation energy

2023-02-13  KAWANO Toshihiko  <kawano@lanl.gov>

	* tools/decemf12.cpp (processMF12): updated
	gamma transition probability array includes the probabilities of gamma emission, when the header line is gammaraywithconversion

2022-12-28  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decelibread.cpp (DeceLibRead): updated
	warning message changed when MF/MT not given in a provided file

2022-12-27  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (DeceRead): bug fixed
	reading MF1/MT455 skipped decay constants

2022-12-16  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decefactor.cpp (DeceFactorMF1): new function
	(DeceFactor): updated
	operation factor works for MF1/MT452 and 456, but not 455

2022-10-28  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceoperation.cpp (DeceOperationREAD): updated
	* source/deceread.cpp (geneCSdata): updated
	new command replaceread ignores the resonance range, and replace all the points by input

2022-10-15  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp: updated
	new version 1.2.6 Garnet, maintenance release

2022-10-14  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decemod6.cpp (DeceBoundCorrect): bug fixed
	boundcorrect bug fixed by HI Kim of KAERI

	* source/kalbach.h: new file
	* source/kalbach.cpp: new file
	calculate Kalbach systematics for MF6/LAW=1,LANG=2
	cms/lab conversion is not so exact

	* source/decetable6.cpp (DeceTableMF6Law1Lang1): new function
	(DeceTableMF6Law1Lang2): new function
	MF6 LAW=1 case was divided into LANG=1 and 2 cases

	* source/deceoperation.cpp (DeceOutputRedirectFile): updated
	when Output option is given, an existing file will be overwritten by DeCE output,
	then subsequent output will be appended

2022-10-12  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/kalbach.h: new file
	* source/kalbach.cpp: new file