@@ -15,6 +15,7 @@
 /tools/decemacs
 /tools/decephoto
 /tools/decemf12
+/tools/decemf15
 /tools/decemf4
 /tools/decemf5
 /tools/decemf6
