@@ -8,13 +8,13 @@
 <body>
 
 <h1><a name = "top"> The Descriptive Correction of ENDF-6 Format Code </a><br/>
-     DeCE (Jadeite) Manual </h1>
+     DeCE (Garnet) Manual </h1>
 
 <p style="text-align:center;">
 <img src="DeCE.png" width="340" height="320" alt="DeCE Logo" title="DeCE" style="margin-top:20px;margin-bottom:20px;padding:0px;">
 </p>
 
-<p style="text-align:center;"> November, 2020 </p>
+<p style="text-align:center;"> October, 2022 </p>
 <p style="text-align:right;"> Kawano Toshihiko </p>
 <p style="text-align:right;"> Los Alamos National Laboratory </p>
 
@@ -149,6 +149,8 @@
              reconangdist (angular distribution from resonance parameters)</a>
         <li> <a href="resonance.html#smoothangdist">
              smoothangdist (energy averaged Legendre coefficients from resonance parameters)</a>
+        <li> <a href="resonance.html#resonanceangdist">
+             resonanceangdist (merge energy averaged Legendre coefficients with existing elastic scattering angular distributions)</a>
         </ul>
 
     <li> <a href="header.html">
