@@ -187,7 +187,6 @@ void gfrPtCross(ENDFDict *dict, ENDF *lib[], double emin, double emax, double de
 /**********************************************************/
 void gfrAngDist(ENDFDict *dict, ENDF *lib[], double emin, double emax, double de, double da)
 {
-  const int ndiv = 100;
   System sys;
   Pcross c;
   double *elab, *pleg, *xang = NULL;
@@ -218,12 +217,6 @@ void gfrAngDist(ENDFDict *dict, ENDF *lib[], double emin, double emax, double de
   cout.setf(ios::scientific, ios::floatfield);
   cout << setprecision(5);
 
-  if( (emin == 0.0) && (emax == 0.0) && (de == 0.0) ){
-    emax = dict->emaxRR;
-    de   = emax / ndiv;
-    emin = de;
-  }
-
   /*** when da > 0, calculate actual angular distributions */
   int nsig = 0;
   if(da > 0.0){
@@ -235,8 +228,15 @@ void gfrAngDist(ENDFDict *dict, ENDF *lib[], double emin, double emax, double de
     }
   }
 
-  /*** always equi-distant energy grid */
-  int np = gfrFixedEnergyRRR(emin,emax,de,elab,dict->emaxRR,dict->emaxUR);
+  int np = 0;
+  if( (emin == 0.0) && (emax == 0.0) && (de == 0.0) ){
+    /*** automatic energy grid */
+    np = gfrAutoEnergyRRR(&sys,lib[kres],elab,dict->emaxRR);
+  }
+  else{
+    /*** equi-distant energy grid */
+    np = gfrFixedEnergyRRR(emin,emax,de,elab,dict->emaxRR,dict->emaxUR);
+  }
 
   for(int i=0 ; i<np ; i++){
 
@@ -276,6 +276,34 @@ void gfrAngDist(ENDFDict *dict, ENDF *lib[], double emin, double emax, double de
   if(da > 0.0){
     delete [] xang;
   }
+}
+
+
+int gfrAngDist(ENDFDict *dict, ENDF *lib[], double *edat, double **pdat)
+{
+  System sys;
+  Pcross c;
+  double *pleg;
+
+  pleg = new double [LMAX*2];
+  Smat.memalloc(2*(LMAX+1)*(LMAX+1)-1);
+  factorial_allocate();
+
+  int kres = dict->getID(2,151);
+  gfrReadHEADData(&sys,lib[kres]);
+
+  int np = gfrAutoEnergyRRR(&sys,lib[kres],edat,dict->emaxRR);
+  for(int i=0 ; i<np ; i++){
+    c = gfrCrossSection(0,edat[i],&sys,lib[kres]);
+    gfrLegendreCoefficient(&sys,pleg);
+    for(int l=0 ; l<LMAX*2 ; l++) pdat[i][l] = pleg[l];
+  }
+
+  Smat.memfree();
+  delete [] pleg;
+  factorial_delete();
+
+  return np;
 }
 
 
@@ -328,9 +356,8 @@ void gfrAngDistSmooth(ENDFDict *dict, ENDF *lib[], double width)
 
   for(int n=0 ; n<npoint ; n++){
     wsum[n] = 0.0;
-    for(int l=1 ; l<LMAX*2 ; l++) pave[n][l] = 0.0;
+    for(int l=0 ; l<LMAX*2 ; l++) pave[n][l] = 0.0;
   }
-
 
   for(int i=1 ; i<=np ; i++){
     double elab = i * de0;
@@ -396,12 +423,21 @@ void gfrSmatrixElement(ENDFDict *dict, ENDF *lib[], double emin, double emax, do
   }
 
   elab = new double [MAX_DBLDATA/2];
-  int np = gfrFixedEnergyRRR(emin,emax,de,elab,dict->emaxRR,dict->emaxUR);
 
   Smat.memalloc(2*(LMAX+1)*(LMAX+1)-1);
 
   int kres = dict->getID(2,151);
   gfrReadHEADData(&sys,lib[kres]);
+
+  int np = 0;
+  if( (emin == 0.0) && (emax == 0.0) && (de == 0.0) ){
+    /*** automatic energy grid */
+    np = gfrAutoEnergyRRR(&sys,lib[kres],elab,dict->emaxRR);
+  }
+  else{
+    /*** equi-distant energy grid */
+    np = gfrFixedEnergyRRR(emin,emax,de,elab,dict->emaxRR,dict->emaxUR);
+  }
 
   cout.setf(ios::scientific, ios::floatfield);
   cout << setprecision(4);
@@ -415,7 +451,7 @@ void gfrSmatrixElement(ENDFDict *dict, ENDF *lib[], double emin, double emax, do
     cout << setw(3) << l;
     cout << setw(3) << j2 << "/2                ";
   }
-  cout <<" Hard-Sphere ";
+  if(sys.alpha > 0.0) cout <<" Hard-Sphere ";
   cout << endl;
 
   for(int i=0 ; i<np ; i++){
@@ -428,10 +464,12 @@ void gfrSmatrixElement(ENDFDict *dict, ENDF *lib[], double emin, double emax, do
       cout << setw(12) << Smat.getElement(j).imag();
     }
 
-    for(l=0 ; l<sys.nl ; l++){
-      gfrPenetrability(l,sys.alpha,&wfn);
-      cout << setw(12) <<  wfn.phase2.real();
-      cout << setw(12) <<  wfn.phase2.imag();
+    if(sys.alpha > 0.0){ // avoid RML case
+      for(l=0 ; l<sys.nl ; l++){
+        gfrPenetrability(l,sys.alpha,&wfn);
+        cout << setw(12) <<  wfn.phase2.real();
+        cout << setw(12) <<  wfn.phase2.imag();
+      }
     }
 
     cout << endl;
