@@ -1,3 +1,13 @@
+2023-03-10  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* source/gfr.cpp (gfrAngDist): updated
+	reconangdist allows to no energy-range parameter option
+
+2023-03-08  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* source/gfrcs7.cpp (RMLStoreChannelParameter): updated
+	since Lmax is not defined in the RML case, angular distribution calculation not performed
+
 2023-02-20  KAWANO Toshihiko  <kawano@lanl.gov>
 
 	* source/deceread.cpp (readISdata): bug fixed
